<resources>
    <string name="app_name">project-coviz</string>
    <string name="title_activity_maps">COVID-19 Visualizer</string>
    <string name="resources_title">Resources</string>
    <string name="disclosure_title">Self-Disclosure Tool</string>
    <string name="disclosure_directions">Use this tool to help document the spread of COVID-19 and help others avoid areas of high infection. Disclosure is completely anonymous. Only disclose your own medically confirmed case of COVID-19, along with the date you first developed symptoms, such as a fever and cough, if known.  Toggling this feature automatically disables notifications of nearby COVID-19 infections.  If you are currently sick, please follow the <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html">guidance of the CDC.</a></string>
    <string name="disclosure_toggle">I have been medically diagnosed with COVID-19:</string>
    <string name="disclosure_date">The date when I first exhibited COVID-19 symptoms:</string>
    <string name="settings_title">Settings</string>
    <string name="settings_hours">Time Range of Past COVID-19 Infection Activity to Display on Heatmap (Hours)</string>
    <string name="cdc_org"><a href="https://cdc.gov">Centers for Disease Control and Prevention</a></string>
    <string name="google_org"><a href="https://google.com">Google</a></string>
    <string name="idsa_org"><a href="https://www.idsociety.org/">Infectious Diseases Society of America</a></string>
    <string name="aha_org"><a href="https://www.heart.org/">American Heart Association</a></string>
    <string name="cmi_org"><a href="https://childmind.org/">Child Mind Institute</a></string>
    <string name="mha_org"><a href="https://www.mhanational.org/">Mental Health America</a></string>
    <string name="cdc_howto"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html">CDC | How to Protect Yourself &amp; Others</a></string>
    <string name="cdc_ifsick"><a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html">CDC | What to Do If You Are Sick</a></string>
    <string name="cdc_symptoms"><a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">CDC | Symptoms of Coronavirus</a></string>
    <string name="cdc_prevent"><a href="https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/index.html">CDC | Prevent Getting Sick</a></string>
    <string name="cdc_faq"><a href="https://www.cdc.gov/coronavirus/2019-ncov/faq.html">CDC | Frequently Asked Questions</a></string>
    <string name="google_title"><a href="https://www.google.com/covid19/">Google | COVID-19 Information and Resources</a></string>
    <string name="idsa_title"><a href="https://www.idsociety.org/public-health/COVID-19-Resource-Center/">IDSA | COVID-19 Resource Center</a></string>
    <string name="aha_title"><a href="https://www.heart.org/en/coronavirus/coronavirus-covid-19-resources">AHA | COVID-19 Resources</a></string>
    <string name="cmi_title"><a href="https://childmind.org/coping-during-covid-19-resources-for-parents/">CMI | COVID-19 Resources for Parents</a></string>
    <string name="mha_title"><a href="https://mhanational.org/covid19">MHA | Mental Health And COVID-19 – Information And Resources</a></string>
    <string name="cdc_index_url">https://www.cdc.gov/coronavirus/2019-nCoV/index.html</string>
    <string name="cdc_howto_url">https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/prevention.html</string>
    <string name="cdc_ifsick_url">https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/steps-when-sick.html</string>
    <string name="cdc_symptoms_url">https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html</string>
    <string name="cdc_prevent_url">https://www.cdc.gov/coronavirus/2019-ncov/prevent-getting-sick/index.html</string>
    <string name="cdc_faq_url">https://www.cdc.gov/coronavirus/2019-ncov/faq.html</string>
    <string name="google_url">https://www.google.com/covid19/</string>
    <string name="idsa_url">https://www.idsociety.org/public-health/COVID-19-Resource-Center/</string>
    <string name="aha_url">https://www.heart.org/en/coronavirus/coronavirus-covid-19-resources</string>
    <string name="cmi_url">https://childmind.org/coping-during-covid-19-resources-for-parents/</string>
    <string name="mha_url">https://mhanational.org/covid19</string>
    <string name="prediction_title">Watchlist</string>
    <string name="disclosure_warning">Please confirm your disclosure of COVID-19 infection.  Because this App does not track user identities, this disclosure cannot be undone.  This will disable notifications of nearby infection activity.</string>
    <string name="disclosure_gratitude">We have notified our servers. Thank you for helping others avoid exposure.</string>
    <string name="latlng_header">Latitude, Longitude</string>
    <string name="count_header">New counts in past 48 hours</string>
</resources>
