<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maps_container">
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MapsActivity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settings_container">
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resources_container">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:id="@+id/resources_table"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/cdc_LL"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/cdc_IV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cdc_small"
                    android:layout_margin="@dimen/space_small"></ImageView>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cdc_org_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_org"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                    <TextView
                        android:id="@+id/cdc_howto_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_howto"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                    <TextView
                        android:id="@+id/cdc_ifsick_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_ifsick"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                    <TextView
                        android:id="@+id/cdc_symptoms_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_symptoms"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                    <TextView
                        android:id="@+id/cdc_prevent_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_prevent"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                    <TextView
                        android:id="@+id/cdc_faq_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cdc_faq"
                        android:layout_marginBottom="@dimen/space_large"></TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/google_LL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/google_IV"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_small"
                    android:layout_margin="@dimen/space_small"></ImageView>

                <TextView
                    android:id="@+id/google_org_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_org"
                    android:layout_marginBottom="@dimen/space_large"></TextView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
