<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/disclosure_container"
    android:orientation="vertical"
    tools:context=".MapsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="left"
        android:id="@+id/disclosureScrollView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/covid_height"
                android:src="@drawable/covid"></ImageView>

            <TextView
                style="@style/HeadingStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclosure_title"
                android:textAlignment="center"
                android:layout_margin="@dimen/space_large"></TextView>

            <TextView
                style="@style/BodyStyle"
                android:id="@+id/disclosureDirections"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclosure_directions"
                android:textAlignment="viewStart"
                android:layout_margin="@dimen/space_small"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/space_large">

                <TextView
                    android:id="@+id/disclosureToggleTV"
                    style="@style/BodyStyle"
                    android:layout_width="@dimen/disc_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disclosure_toggle"
                    android:textAlignment="viewStart"
                    android:layout_margin="@dimen/space_small"></TextView>

                <Switch
                    android:id="@+id/disclosureToggleSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOn="Yes"
                    android:layout_margin="@dimen/space_large"></Switch>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/space_large">

            <TextView
                android:id="@+id/disclosureDateTV"
                style="@style/BodyStyle"
                android:layout_width="@dimen/disc_width"
                android:layout_height="wrap_content"
                android:text="@string/disclosure_date"

                android:textAlignment="viewStart"
                ></TextView>

            <DatePicker
                android:id="@+id/disclosureDatePicker"
                style="@style/BodyStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"></DatePicker>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/space_large"
            android:gravity="center">

            <Button
                android:id="@+id/disclosureSubmitButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:layout_gravity="center"></Button>
        </LinearLayout>

        </LinearLayout>


    </ScrollView>
</LinearLayout>